solved overflow issue

--- a/fronted-blog/src/index.css
+++ b/fronted-blog/src/index.css
@@ -5,6 +5,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+    overflow-x: hidden;
+}
 
 .custom-content h1 {
     @apply text-4xl font-bold mb-4;
